# untitled

./: .gitignore  AGENTS.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/council/: agents.py  analysis.py  chunker.py  config.py  council.py  db.py  embeddings.py  live_council.py  main.py  report.py  retriever.py  schemas.py
backend/src/council/personas/: __init__.py  buddhist.py  christian.py  hindu.py  islam.py  jewish.py
backend/src/council/scripts/: download_scriptures.py  ingest.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentCard.tsx  AgreementMatrix.tsx  AnalysisDashboard.tsx  AudioVisualizer.tsx  CollapsibleSection.tsx  ConsensusGauge.tsx  CouncilAvatarBar.tsx  CouncilSession.tsx  CouncilShowcase.tsx  DiscussionPhase.tsx  FaithSelector.tsx  Icon.tsx  LiveCouncilSession.tsx  PhaseTimeline.tsx  QuestionInput.tsx  ReportCard.tsx  ScriptureStats.tsx  SpeakerAvatar.tsx  ThemeBreakdown.tsx
frontend/src/hooks/: useCouncilStream.ts  useLiveCouncil.ts  useLiveCouncilDemo.ts  useSharedSession.ts
frontend/src/utils/: audioPlayer.ts  demoData.ts
