[project]
name = "council-of-faiths"
version = "0.1.0"
description = "Multi-agent scripture discussion platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-genai",
    "psycopg[binary]",
    "pgvector",
    "pydantic-settings",
    "sse-starlette",
]

[project.scripts]
council = "council.main:run"
ingest = "council.scripts.ingest:main"
download-scriptures = "council.scripts.download_scriptures:main"

[tool.uv]
dev-dependencies = [
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council"]
